@@ -1,0 +1,1 @@
+Hash is: 3 elements
