@@ -1,0 +1,5 @@
+debug(7);
+
+global('%d');
+%d = %(a => "apple", b => "boy", c => "cat");
+println("Hash is: " . size(%d) . " elements");
